# PolyPlugin

./: CMakeLists.txt
PolyPlugin/: CMakeLists.txt
PolyPlugin/CalculatorPlugin/src/: Plugin.cpp
PolyPlugin/CalculatorPluginAPI/src/: AddIntent.hpp
PolyPlugin/PolyPlugin/src/pp/: IntentInfo.hpp  IntentRouter.hpp  PluginInfo.hpp  PluginsContainer.hpp  PolyPlugin.hpp  ReceiversCollection.hpp
PolyPlugin/TestApp/: CMakeLists.txt
PolyPlugin/TestApp/src/: Main.cpp
