set(POLYPLUGIN_TARGET PolyPlugin)
set(CALCULATOR_PLUGIN_API_TARGET CalculatorPluginAPI)
set(CALCULATOR_PLUGIN_TARGET CalculatorPlugin)
set(EMITTER_PLUGIN_TARGET EmitterPlugin)
set(TEST_APP_TARGET TestApp)

add_subdirectory(PolyPlugin)
add_subdirectory(CalculatorPluginAPI)
add_subdirectory(CalculatorPlugin)
#add_subdirectory(EmitterPlugin)
add_subdirectory(TestApp)